# geo-careatlas

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.local.conf  pyproject.toml
.github/workflows/: build_push_deploy.yml
k8s/: deployment.yml
src/careatlas/app/: auth.py  marutil.py  proxy.py  repo.py  server.py  util.py
src/careatlas/app/static/: undp_style.css
src/careatlas/notebooks/: global_poverty.py
src/careatlas/notebooks/central_and_latin_america/thematic_areas/: economic_outlook.py
