[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careatlas"]

[project]
name = "careatlas"
version = "0.1.0"
description = "FastAPI + Marimo with GitHub OAuth on AKS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "marimo>=0.10.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0", # Required if you reverse-proxy the editor
    "gitpython>=3.1.0", # For the 'Commit & Push' button logic
    "nicegui>=3.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.marimo.runtime]
# Tells Marimo to look in 'src' for local modules 
# so 'import my_utils' works inside the notebook.
pythonpath = ["src"]

[tool.marimo.server]
follow_symlink = true