[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careatlas"]

[project]
name = "careatlas"
version = "0.1.0"
description = "FastAPI + Marimo with GitHub OAuth on AKS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0", # Required if you reverse-proxy the editor
    "gitpython>=3.1.0", # For the 'Commit & Push' button logic
    "nicegui>=3.7.1",
    "lonboard>=0.14.0",
    "shapely>=2.1.2",
    "pyarrow>=23.0.1",
    "marimo>=0.19.11",
    "fastapi-proxy-lib[standard]>=0.3.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.marimo.runtime]
# Tells Marimo to look in 'src' for local modules 
# so 'import my_utils' works inside the notebook.
pythonpath = ["src"]

[tool.marimo.server]
follow_symlink = true
